# slipgate-app

./: .gitattributes  CLAUDE.md  index.html  package.json
.claude/: settings.local.json
.claude/commands/: cfg-parser.md  checkpoint.md  feature.md  restart.md  ship.md
.claude/scripts/: branch-guard.sh
docs/: AUTH.md  CFG-PARSER.md  DESIGN.md  DEVELOPMENT.md  EZQUAKE-RESOLUTION.md  FEATURES.md  PERIPHERAL-SELECTOR.md  ROADMAP.md  SYSTEM-SPECS.md  VISION.md
docs/research/: QWFWD-SECURITY.md
src/: App.tsx  app.css  auth.ts  firebase.ts  index.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  ezquake.rs  mod.rs  peripherals.rs  system.rs  updater.rs
src/components/: Changelog.tsx  ClientsTab.tsx  GearSelector.tsx  KeyboardLayout.tsx  MouseLayout.tsx  MouseSvg.tsx  ProfileTab.tsx  ScheduleTab.tsx  SettingsTab.tsx  SideNav.tsx  TabNav.tsx  ToolsTab.tsx  WeaponBindViz.tsx  WhoBanner.tsx
src/data/: mice-supplement.json  mice.json  mousepads-supplement.json  mousepads.json
visual/sample-style/: sample.html  style.css
