[package]
name = "slipgate-app"
version = "0.1.0"
description = "Desktop companion for QuakeWorld"
authors = ["you"]
edition = "2021"

[lib]
name = "slipgate_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
wmi = "0.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
] }
