[package]
name = "slipgate-app"
version = "0.1.0"
description = "Desktop companion for QuakeWorld"
authors = ["you"]
edition = "2021"

[lib]
name = "slipgate_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
wmi = "0.14"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2"
reqwest = { version = "0.13", features = ["json", "stream"] }
sha2 = "0.10"
md-5 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
semver = "1"
tokio = { version = "1", features = ["time"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Storage_FileSystem",
] }
